SharIt 1.00 Добавил основной функционал по вещам и юзерам, добавил модели и dto для остальных сущностей.