@@ -1,53 +1,78 @@
 package ru.practicum.shareit.item;
 
+import lombok.extern.slf4j.Slf4j;
+import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Repository;
 import ru.practicum.shareit.exception.NotFoundException;
 import ru.practicum.shareit.item.model.Item;
+import ru.practicum.shareit.user.UserStorage;
 
 import java.util.*;
-import java.util.stream.Collectors;
 
 @Repository
 public class InMemoryItemStorage implements ItemStorage {
 
-    List<Item> items = new ArrayList<>();
+    @Autowired
+    UserStorage userStorage;
+    Map <Long,List<Item>> items = new HashMap<>();
 
     @Override
     public Item addItem(Item item) {
+        checkUser(item.getOwnerId());
         generateId(item);
-        items.add(item);
+        List<Item> itemList = items.computeIfAbsent(item.getOwnerId(), k -> new ArrayList<>());
+        itemList.add(item);
+        items.put(item.getOwnerId(), itemList);
         return item;
     }
 
     @Override
     public Item updateItem(Item item) {
-        Item newItem = items.stream().filter(i -> i.getId().equals(item.getId())).findFirst()
-                .orElseThrow(() -> new RuntimeException("Вещь с id + " + item.getId() + " не найдена"));
-        newItem.setName(item.getName());
-        newItem.setDescription(item.getDescription());
-        newItem.setStatus(item.getStatus());
+        if (item == null || item.getId() == null || item.getOwnerId() == null) {
+            throw new NotFoundException("Предмет не найден");
+        }
+        checkUser(item.getOwnerId());
+        List <Item> itemList = getUserItems(item.getOwnerId());
+        Item newItem = itemList.stream().filter(item1 -> item1.getId().equals(item.getId()))
+                .findFirst()
+                .orElseThrow(() -> new NotFoundException("Предмет с id " + item.getId() + "не найден"));
+        if (item.getName() != null) newItem.setName(item.getName());
+        if (item.getDescription() != null) newItem.setDescription(item.getDescription());
+        if (item.getAvailable() != null) newItem.setAvailable(item.getAvailable());
         return newItem;
     }
 
     @Override
-    public Item getItem(Long id) {
-        return items.stream().filter(item -> item.getId().equals(id)).findFirst().orElseThrow(() -> new NotFoundException("Вещь с id + " + id + " не найдена"));
+    public Optional<Item> getItem(Long id) {
+        return getAllItems().stream().filter(o -> o.getId().equals(id)).findFirst();
+    }
+
+    @Override
+    public List<Item> getAllItems() {
+        return items.values().stream().flatMap(Collection::stream).toList();
     }
 
     @Override
     public List<Item> getUserItems(Long userId) {
-        return items.stream()
-                .filter(item -> Objects.equals(item.getOwnerId(), userId))
-                .collect(Collectors.toList());
+        return items.getOrDefault(userId, Collections.emptyList());
     }
 
     @Override
     public List<Item> searchItems(String text) {
-        return items.stream().filter(item -> item.getName().toLowerCase().contains(text.toLowerCase())).collect(Collectors.toList());
+        return getAllItems().stream()
+                .filter(Item::getAvailable)
+                .filter(item -> item.getName().toLowerCase().contains(text.toLowerCase()) ||
+                item.getDescription().toLowerCase().contains(text.toLowerCase())).toList();
+    }
+
+    private void checkUser(Long userId) {
+        if (userStorage.getUser(userId).isEmpty()) {
+            throw new NotFoundException("Пользователь с id " + userId + " не найден");
+        }
     }
 
     private void generateId(Item item) {
-        long id = items.stream().mapToLong(Item::getId).max().orElse(0L) + 1;
+        long id = getAllItems().stream().mapToLong(Item::getId).max().orElse(0L) + 1;
         item.setId(id);
     }
 }
